applications/external/nounoursdestavernes/uptime/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime
spec:
  parentRefs:
  - name: kgateway
    namespace: kgateway
    sectionName: https
  hostnames:
  - "uptime-aurelien.yewolf.fr"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: uptime-kuma
      port: 3001
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
